# sdl-sandbox

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: CMakeLists.txt
include/GameEngine/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.h  TextureManager.cpp  TextureManager.h
src/: CMakeLists.txt  main.cpp  sdl_main_3sec.cpp
